hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics5.php.like_types.exp
File "tconst_on_generics5.php", line 38, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 22, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 22, characters 78-78:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 22, characters 31-32:
Definition is here
File "tconst_on_generics5.php", line 38, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 22, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 22, characters 78-78:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 22, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 38, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 22, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 22, characters 78-78:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 22, characters 44-44:
Definition is here
File "tconst_on_generics5.php", line 38, characters 19-20:
Invalid argument (Typing[4110])
File "tconst_on_generics5.php", line 22, characters 47-48:
Some type constraint(s) are violated here
File "tconst_on_generics5.php", line 22, characters 47-48:
T2 is a constrained type parameter
File "tconst_on_generics5.php", line 15, characters 18-23:
Expected string
File "tconst_on_generics5.php", line 22, characters 78-78:
  resulting from accessing the type constant 'T'
File "tconst_on_generics5.php", line 34, characters 12-20:
  on an object of exactly the class StringBox
File "tconst_on_generics5.php", line 22, characters 47-48:
But got dynamic
File "tconst_on_generics5.php", line 39, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 25, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 25, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 25, characters 31-32:
Definition is here
File "tconst_on_generics5.php", line 39, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 25, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 25, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 25, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 39, characters 14-17:
Some type constraint(s) here are violated (Typing[4090])
File "tconst_on_generics5.php", line 25, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 25, characters 47-47:
No type constant 'T' in B
File "tconst_on_generics5.php", line 4, characters 7-7:
Declaration of B is here
File "tconst_on_generics5.php", line 39, characters 19-20:
Invalid argument (Typing[4110])
File "tconst_on_generics5.php", line 25, characters 50-51:
Some type constraint(s) are violated here
File "tconst_on_generics5.php", line 25, characters 50-51:
T2 is a constrained type parameter
File "tconst_on_generics5.php", line 15, characters 18-23:
Expected string
File "tconst_on_generics5.php", line 25, characters 81-81:
  resulting from accessing the type constant 'T'
File "tconst_on_generics5.php", line 34, characters 12-20:
  on an object of exactly the class StringBox
File "tconst_on_generics5.php", line 25, characters 50-51:
But got dynamic
File "tconst_on_generics5.php", line 40, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 28, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 28, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 28, characters 31-32:
Definition is here
File "tconst_on_generics5.php", line 40, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics5.php", line 28, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics5.php", line 28, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics5.php", line 28, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 40, characters 14-17:
A 'where' type constraint is violated here (Typing[4110])
File "tconst_on_generics5.php", line 28, characters 26-29:
This method's where constraints contain a generic type access
File "tconst_on_generics5.php", line 28, characters 50-51:
Some type constraint(s) are violated here
File "tconst_on_generics5.php", line 28, characters 50-51:
T2 is a constrained type parameter
File "tconst_on_generics5.php", line 15, characters 18-23:
Expected string
File "tconst_on_generics5.php", line 28, characters 81-81:
  resulting from accessing the type constant 'T'
File "tconst_on_generics5.php", line 28, characters 47-47:
  on an object of type C
File "tconst_on_generics5.php", line 28, characters 50-51:
But got dynamic
File "tconst_on_generics5.php", line 22, characters 78-78:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics5.php", line 22, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 25, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics5.php", line 25, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 28, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics5.php", line 28, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 22, characters 78-78:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics5.php", line 22, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 23, characters 16-19:
You are trying to access the member getK but this is not an object, it is a value of generic type T1 (Typing[4062])
File "tconst_on_generics5.php", line 22, characters 51-52:
Definition is here
File "tconst_on_generics5.php", line 25, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics5.php", line 25, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 26, characters 16-19:
You are trying to access the member getK but this is not an object, it is a dynamic value or an object of type Box (Typing[4062])
File "tconst_on_generics5.php", line 25, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 28, characters 81-81:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics5.php", line 28, characters 37-39:
Definition is here
File "tconst_on_generics5.php", line 29, characters 16-19:
You are trying to access the member getK but this is not an object, it is a dynamic value or an object of type Box (Typing[4062])
File "tconst_on_generics5.php", line 28, characters 37-39:
Definition is here
